Name:                s3sign
Version:             0.0
Author:              anatoly yakovenko
Build-Type:          Simple
Cabal-Version:       >=1.2
-- -Werror 
Executable s3sign
  Main-is:           s3sign.hs
  ghc-options:       -Wall -rtsopts -threaded -main-is S3sign.main 
  Build-Depends:     base, 
                     bytestring,
                     s3-signer
